[package]
name = "leptonica-plumbing"
version = "0.4.1"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"
description = "Safe wrapper of `leptonica-sys`"
homepage = "https://github.com/ccouzens/leptonica-plumbing"
repository = "https://github.com/ccouzens/leptonica-plumbing"
readme = "README.md"
keywords = ["leptonica", "image"]
license = "MIT"

[dependencies]
leptonica-sys = "~0.4"
thiserror = "1.0"
